--- a/.github/workflows/Build-imopenwrt.yml
+++ b/.github/workflows/Build-imopenwrt.yml
@@ -78,8 +78,7 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
-        sed -i '$a src-git smpackage https://github.com/kenzok8/small-package' feeds.conf.default
-
+        sed -i '$a src-git helloworld https://github.com/fw876/helloworld' feeds.conf.default
     - name: Free up disk space
       env:
         DEBIAN_FRONTEND: noninteractive
@@ -99,7 +98,6 @@ jobs:
         CONFIG_FILE: '${{matrix.target}}.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./customize.sh && ./customize.sh
         cd openwrt
         cp -f feeds/smpackage/.github/diy/default-settings package/emortal/default-settings/files/99-default-settings
         rm -rf feeds/packages/net/{alist,adguardhome,brook,gost,mosdns,redsocks*,smartdns,trojan*,v2ray*,xray*}
