--- a/.github/workflows/Build-imopenwrt.yml
+++ b/.github/workflows/Build-imopenwrt.yml
@@ -4,7 +4,7 @@
 # Author: kenzo
 #=================================================
 
-name: openwrt_23.05
+name: immopenwrt_23.05
 
 on:
   repository_dispatch:
